Change user 'username' field to 'email' field
