# api/src/routes/session.ts
@@ -1,19 +1,15 @@
 import { Router } from "express";
 import passport from "passport";
-import { isLoggedIn } from "../middlewares/authMiddleware";
-import User from "../models/User";
-import { encryptPassword } from "../util/passwordUtils";
 
 const session = Router();
 
-// uses 'username' and 'password' field
+// uses 'email' and 'password' field
 session
   .route("/")
   .post(
     passport.authenticate("local", {
       failureRedirect: "/login",
       successRedirect: "/notes",
-      failureFlash: true,
     }),
     (req, res) => {
       res.sendStatus(200);
