# api/src/routes/users.ts
@@ -8,7 +8,7 @@ const users = Router();
 users.route("/").post(async (req, res) => {
   const encrypedPassword = await encryptPassword(req.body.password);
   await User.create({
-    username: req.body.username,
+    email: req.body.email,
     password: encrypedPassword,
   });
   res.redirect("/login");
